--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ apply plugin: "idea"
 apply plugin: "application"
 apply plugin: "maven"
 
+mainClassName = "de.htwg.cityyanderecarcassonne.thintui.CarcassonneThinTUI"
+
 idea {
     project {
         jdkName = '1.8'
@@ -17,4 +19,8 @@ idea {
 dependencies {
     compile group: 'com.typesafe.akka', name: 'akka-http_2.12',   version: '10.1.3'
     compile group: 'com.typesafe.akka', name: 'akka-stream_2.12', version: '2.5.12'
+}
+
+sourceSets {
+    main.java.srcDir "src"
 }
